# TDS-Project1-Ollama_FastAPI-

./: README.md  crewai_breaking.txt  crewai_chromadb_sqlite_troubleshoot.py  datagen.py  evaluate.py  history.txt  history_simple.txt  requirements.txt
b2b/: README.md  pyproject.toml  report.md
b2b/knowledge/: user_preference.txt
b2b/src/b2b/: crew.py  main.py
fastapi/: app.py  notes.txt
latest_ai_development/: pyproject-old.toml  pyproject.toml
latest_ai_development/db/: chroma.sqlite3
latest_ai_development/src/latest_ai_development/: crew.py  main.py
latest_ai_development/src/latest_ai_development/app/: main.py
latest_ai_development/src/latest_ai_development/config/: agents.yaml  info.md  tasks.yaml  taskss.yaml
