[project]
name = "b2b"
version = "0.1.0"
description = "b2b using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
b2b = "b2b.main:run"
run_crew = "b2b.main:run"
train = "b2b.main:train"
replay = "b2b.main:replay"
test = "b2b.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
